--- a/index.html
+++ b/index.html
@@ -6,6 +6,78 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- Main Title -->
+    <header>
+        <h1>Calculator BMI</h1>
+    </header>
+
+    <main>
+        <!-- Left Content -->
+        <section>
+            <!-- Main Article -->
+        <article>
+            <p>Berat badan ideal adalah impian semua orang. Tidak hanya memiliki bentuk tubuh yang 
+                menunjang penampilan</p>
+        </article>
+
+        <!-- Form -->
+        <section>
+            <form style="border: 1px solid">
+                <div>
+                    <input type="radio" id="selection-man"><label for="'selection-man">Laki-Laki</label>
+                    <input type="radio" id="selection-woman"><label for="'selection-woman">Perempuan</label>
+                </div>
+                <div>
+                    <label for="input-berat-badan">Berat Badan (kg)</label>
+                    <input type="number" id="'input-berat-badan">
+                </div>
+                <div>
+                    <label for="input-usia">Usia (th)</label>
+                    <input type="number" id="'input-usia">
+                </div>
+                <div>
+                    <label for="input-tinggi-badan">Tinggi Badan (cm)</label>
+                    <input type="number" id="'input-tinggi-badan">
+                </div>
+                <div>
+                    <button>Submit BIM</button>
+                    <button>Reset</button>
+                </div>
+            </form>
+        </section>
+
+        <!-- Form Article-->
+        <section>
+            <header>
+                <h2>Keunggulan Fitur</h2>
+            </header>
+
+            <article>
+                <p>Lorem Ipsum Dolor Sit Amet</p>
+            </article>
+        </section>
+        </section>
+
+        <!-- Right Content -->
+        <section>
+            <!-- Result Article -->
+        <article>
+            <header>
+                <h1>Hasil</h1>
+            </header>
+
+            <!-- Result Content --> 
+            <section>
+
+            </section>
+
+            <!-- General Information -->
+            <article>
+
+            </article>
+
+        </article>
+        </section>
+    </main>
 </body>
 </html>
