--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </header>
 
             <article>
-                <p>Lorem Ipsum Dolor Sit Amet</p>
+                <p>Lorem Ipsum Dolor Sit Amet...</p>
             </article>
         </section>
         </section>
