--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
         <!-- Left Content -->
         <section class="main-content">
             <!-- Main Article -->
-        <article>
-            <p>Berat badan ideal adalah impian semua orang. Tidak hanya memiliki bentuk tubuh yang 
-                menunjang penampilan, berat badan ieal juga menandakan kondisi tubuh yang sehat.
-                Bagaimana denganmu?</p>
+        <article class="text">
+            <p>Berat badan ideal adalah impian semua orang. Tidak hanya memiliki bentuk tubuh yang menunjang penampilan, berat badan ieal juga menandakan kondisi tubuh yang sehat. Bagaimana denganmu?</p>
             <p>Yuk, hitung sekarang di kalkulator BMI</p>
         </article>
 
@@ -33,18 +31,18 @@
                 </div>
                 <div>
                     <label for="input-berat-badan">Berat Badan (kg)</label>
-                    <input type="number" id="'input-berat-badan">
+                    <input type="number" id="'berat-badan" required>
                 </div>
                 <div>
-                    <label for="input-usia">Usia (th)</label>
-                    <input type="number" id="'input-usia">
+                    <label for="input-usia">Usia (tahun)</label>
+                    <input type="number" id="usia" required>
                 </div>
                 <div>
                     <label for="input-tinggi-badan">Tinggi Badan (cm)</label>
-                    <input type="number" id="'input-tinggi-badan">
+                    <input type="number" id="tinggi-badan" required>
                 </div>
                 <div>
-                    <button class="button submit">Submit BIM</button>
+                    <button class="button submit" onclick="hitungBMI()">Hitung BMI</button>
                     <button class="button reset">Reset</button>
                 </div>
             </form>
@@ -57,11 +55,13 @@
             </header>
 
             <article>
-
-                <p>Kalkulator ini hanya boleh digunakan oleh orang dewasa (wanita hamil atau
-                    menyusui tidak boleh mengandalkan pembacaan BMI ini) dan tidak ada tindakan
-                yang harus diambil berdasarkan nilainya selain berkonsultasi dengan orang yang
-            memenuhi syarat seperti dokter.</p>
+                <ul>
+                    <li>Menghitung berat badan</li>
+                    <li>Menentukan kategori berat badan ideal atau tidak</li>
+                    <li>Mempersiapkan program penurunan berat badan</li>
+                </ul>
+                <p class="text">Kalkulator ini hanya boleh digunakan oleh orang dewasa (wanita hamil atau menyusui tidak boleh mengandalkan pembacaan BMI ini) dan tidak ada tindakan yang harus diambil berdasarkan nilainya selain berkonsultasi dengan orang yang memenuhi syarat seperti dokter.</p>
+                <p>Kalkulator akan memberi Anda gambaran tetang perbandingan berat badan Anda dengan nilai umum. Indeks Massa Tubuh (BMI) dihitung sebagai berat badan Anda (dalam kilogram) dibagi dengan kuadrat tinggi badan Anda (dalam meter) atau BMI =Kg/M<sup>2</sup></p>
             </article>
         </section>
         </section>
@@ -75,25 +75,40 @@
             </header>
 
             <!-- Result Content --> 
-            <section class="result-section">
+            <section class="result-section" id="result">
                 <p>Hasil Result Adalah:</p>
 
-                <h2>24,7</h2>
+                <h2 id="nilaiBMI"></h2>
 
-                <p>Anda Memiliki Berat Badan Berlebih</p>
+                <p id="kategoriBMI"></p>
 
                 <div>
-                    <button class="button download">Download Hasil BMI</button>
+                    <button class="button download" onclick="donwloadResult()">Download Hasil BMI</button>
                 </div>
             </section>
 
             <!-- General Information -->
             <article>
+                <p id="rangeBMI">Hasil BMI diantara</p>
 
+                <p></p>
+                <button class="button konsul">Konsultasi Ahli Gizi via Aplikasi</button>
+                <button class="button regist">Registrasi Online Ahli Gizi</button>
+            </article>
+
+            <!-- Penyakit dari hasil BMI -->
+            <article class="result-section">
+                <p >Beberapa penyakit yang berasal dari</p>
+                <ul>
+                    <li></li>
+                </ul>
+                <button class="button konsul">Konsultasi Ahli Gizi via Aplikasi</button>
+                <button class="button regist">Registrasi Online Ahli Gizi</button>
             </article>
 
         </article>
         </section>
     </main>
+    <script>src="scripts.js"</script>
 </body>
 </html>
