--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <p></p>
                 <button class="button konsul">Konsultasi Ahli Gizi via Aplikasi</button>
                 <button class="button regist">Registrasi Online Ahli Gizi</button>
-            </article>
+            </article><br>
 
             <!-- Penyakit dari hasil BMI -->
             <article class="result-section">
